--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,16 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+.background {
+  position: absolute;  
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.random {
+  display: flex;
+}
 
 /* Sections
    ========================================================================== */
